fix: text was too close

--- a/src/components/profile/profile.scss
+++ b/src/components/profile/profile.scss
@@ -88,6 +88,8 @@
 
 .DHS__Profile__Posts > h2 {
   font-size: 2.5rem;
+
+  margin-bottom: 1rem;
 }
 
 // Post
